--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,9 +58,9 @@
     <string name="passengers_tariffs_disable_person">Инвалидный</string>
     <string name="search_button">Искать</string>
 
-    <string name="trip_number">Рейс №%1$d</string>
+    <string name="trip_number">Рейс №%1$s</string>
     <string name="seat_type">Тип места: %1$s</string>
-    <string name="free_seats">Свободно мест: %1$d из %2$d</string>
+    <string name="free_seats">Свободно мест: %1$s из %2$s</string>
     <string name="carrier">Перевозчик: %1$s</string>
 
     <string name="title_choose_seats">Выбор места</string>
