--- a/app/src/main/res/values-kk/strings.xml
+++ b/app/src/main/res/values-kk/strings.xml
@@ -15,6 +15,7 @@
     <string name="notifications">Уведомления</string>
 
     <string name="exit_button">Выход</string>
+    <string name="exit_user_button">Выйти</string>
     <string name="main_user_subtitle">Основное</string>
     <string name="user_my_data">Мои данные</string>
     <string name="user_my_trips">Мои поездки</string>
@@ -155,7 +156,7 @@
     <string name="one_person">человек</string>
     <string name="two_person">человека</string>
 
-    <string name="about_app_title">О приложенииии</string>
+    <string name="about_app_title">О приложении</string>
     <string name="change_language_title">Сменить язык</string>
     <string name="russian_language">Русский</string>
     <string name="kazakh_language">Казахский</string>
