--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
     <string name="notifications">Уведомления</string>
 
     <string name="exit_button">Выход</string>
+    <string name="exit_user_button">Выйти</string>
     <string name="main_user_subtitle">Основное</string>
     <string name="user_my_data">Мои данные</string>
     <string name="user_my_trips">Мои поездки</string>
