--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -81,6 +81,7 @@
 
     <string name="trip_number">Рейс №%1$s</string>
     <string name="seat_type">Тип места: %1$s</string>
+    <string name="seat_type_subtitle">Тип места:</string>
     <string name="free_seats">Свободно мест: <font color='#2898FF'>%1$s из %2$s</font></string>
     <string name="carrier">Перевозчик: %1$s</string>
 
@@ -133,6 +134,10 @@
     <string name="title_contacts">Контакты</string>
     <string name="title_user">Профиль</string>
     <string name="title_ticket_scanner">Сканирование билета</string>
+    <string name="trip_time">%1$sч %2$мин в пути</string>
+    <string name="all_seats">Все</string>
+    <string name="lying_seats">Лежачий</string>
+    <string name="seating_seats">Сидячий</string>
 
     <string name="no_tickets">Билетов нет!</string>
     <string name="tickets_list_title">Список ваших билетов</string>
@@ -158,9 +163,20 @@
 
     <string name="about_app_title">О приложении</string>
     <string name="change_language_title">Сменить язык</string>
+    <string name="language_title">Язык приложения</string>
     <string name="russian_language">Русский</string>
-    <string name="kazakh_language">Казахский</string>
+    <string name="kazakh_language">Қазақша</string>
+    <string name="current_language">Русский</string>
 
+    <string name="enter_subtitle">Войдите, чтобы видеть свои билеты\nи пассажиров</string>
+    <string name="enter_user_text">Используйте эл. почту, которую указывали при покупке или регистрации на BusJol </string>
+    <string name="forgot_password">Забыли пароль?</string>
+    <string name="regisration">Зарегистрироваться</string>
+
+    <string name="rate_app">Оценить приложение</string>
+    <string name="rate_app_title">Оцените приложение</string>
+    <string name="i_like_it">Нравится</string>
+    <string name="i_don_not_like_it">Не особо</string>
 
     <string name="qr_camera_scan">Наведите камеру на\nQR-код</string>
 </resources>
